Pruebas node/pod affinity

--- a/aa_nginx_deployment_node_selector.yaml
+++ b/aa_nginx_deployment_node_selector.yaml
@@ -14,3 +14,6 @@ spec:
         image: sirile/scala-boot-test
         ports:
         - containerPort: 80
+      nodeSelector:
+        #region: asia
+        env: production
