--- a/gluster_servicio_k8s_MV/glusterfs-endpoints.yaml
+++ b/gluster_servicio_k8s_MV/glusterfs-endpoints.yaml
@@ -3,16 +3,17 @@ kind: Endpoints
 apiVersion: v1
 metadata:
   name: glusterfs-cluster
+  namespace: gluster
 subsets:
 - addresses:
-  - ip: 192.168.1.118
+  - ip: 192.168.1.126
   ports:
   - port: 1
 - addresses:
-  - ip: 192.168.1.119
+  - ip: 192.168.1.127
   ports:
   - port: 1
 - addresses:
-  - ip: 192.168.1.120
+  - ip: 192.168.1.128
   ports:
   - port: 1
