--- a/rbac/ns-security.yaml
+++ b/rbac/ns-security.yaml
@@ -2,8 +2,8 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   namespace: nlp
-  name: ns-viewer
+  name: ns-security
 rules:
 - apiGroups: ["","extensions"] # "" indicates the core API group
-  resources: ["*"]
-  verbs: ["get", "watch", "list"]
+  resources: ["roles", "rolebindings"]
+  verbs: ["get", "watch", "list", "update", "patch", "delete"]
