--- a/rbac/ns-network-bindings.yaml
+++ b/rbac/ns-network-bindings.yaml
@@ -1,11 +1,11 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  namespace: nlp
   name: ns-network
+  namespace: nlp
 subjects:
 - kind: User
-  name: rai
+  name: vinci
   apiGroup: rbac.authorization.k8s.io
 roleRef:
   kind: Role
