--- a/nginx-nlp/nginx-nlp-ingress.yaml
+++ b/nginx-nlp/nginx-nlp-ingress.yaml
@@ -3,6 +3,14 @@ kind: Ingress
 metadata:
   name: ingress-nlp
   namespace: nlp
+  annotations:
+#    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
+    #nginx.ingress.kubernetes.io/add-base-url: "true"
+    nginx.ingress.kubernetes.io/enable-rewrite-log: "true"
+    #nginx.ingress.kubernetes.io/app-root: /
+    kubernetes.io/ingres.class: "nginx"
+
 spec:
   rules:
   - host: nginx.nlp
