--- a/nginx-nlp/v1/nginx-nlp-service-v1.yaml
+++ b/nginx-nlp/v1/nginx-nlp-service-v1.yaml
@@ -1,12 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx-nlp
+  name: nginx-nlp-v1
   namespace: nlp
 spec:
   ports:
   - port: 80
   selector:
-    app: nginx-nlp
+    app: nginx-nlp-v1
   type: ClusterIP
-  #type: NodePort
