--- a/nginx-nlp/v2/nginx-nlp-deploy-v2.yaml
+++ b/nginx-nlp/v2/nginx-nlp-deploy-v2.yaml
@@ -1,14 +1,14 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: nginx-nlp
+  name: nginx-nlp-v2
   namespace: nlp
 spec:
-  replicas: 3
+  replicas: 1
   template:
     metadata:
       labels:
-        app: nginx-nlp
+        app: nginx-nlp-v2
     spec:
       tolerations:
       - key: "node.kubernetes.io/unreachable"
@@ -29,11 +29,11 @@ spec:
                 - key: app
                   operator: In
                   values:
-                  - nginx-nlp
+                  - nginx-nlp-v2
               topologyKey: kubernetes.io/hostname
       containers:
-      - name: nginx-nlp
-        image: javisol/nginx-nlp:1.0
+      - name: nginx-nlp-v2
+        image: javisol/nginx-nlp:1.3
         imagePullPolicy: Always
         #imagePullPolicy: IfNotPresent
         ports:
