--- a/privoxy/ingress.yaml
+++ b/privoxy/ingress.yaml
@@ -1,21 +1,18 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: ingress-nlp
-  namespace: nlp
+  name: privoxy
+  namespace: privoxy
   annotations:
-#    kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/rewrite-target: /$2
-    #nginx.ingress.kubernetes.io/add-base-url: "true"
     nginx.ingress.kubernetes.io/enable-rewrite-log: "true"
-    #nginx.ingress.kubernetes.io/app-root: /
     kubernetes.io/ingress.class: "nginx"
 
 spec:
   rules:
-  - host: nlp.kubi.web
+  - host: privoxy.kubi.web
     http:
       paths:
       - backend:
-          serviceName: nginx-nlp
-          servicePort: 80
+          serviceName: privoxy
+          servicePort: 8118
