--- a/privoxy/deploy.yaml
+++ b/privoxy/deploy.yaml
@@ -1,10 +1,13 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: privoxy
   namespace: privoxy
 spec:
   replicas: 2
+  selector:
+    matchLabels:
+      app: privoxy
   template:
     metadata:
       labels:
