--- a/gluster_servicio_k8s_MV/pruebagluster-ep.yaml
+++ b/gluster_servicio_k8s_MV/pruebagluster-ep.yaml
@@ -1,10 +1,13 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: pruebagluster
   namespace: gluster
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: pruebagluster
   template:
     metadata:
       labels:
@@ -12,7 +15,7 @@ spec:
     spec:
       containers:
       - name: pruebagluster
-        image: sirile/scala-boot-test
+        image: javisol/jsa-tools:0.1
         ports:
         - containerPort: 80
         volumeMounts:
